// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders \`large\` size correctly 1`] = `
.pounce-0 {
  width: auto;
  outline: none;
  padding-left: 16px;
  padding-right: 16px;
  height: 46px;
  font-size: 0.938rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #11A5F3;
  background-color: #11A5F3;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-0:hover {
  background-color: #1baffd;
  border-color: #1baffd;
}

.pounce-0:focus {
  background-color: #1baffd;
  border-color: #66faff;
}

.pounce-0:active,
.pounce-0[data-active=true] {
  background-color: #079be9;
  border-color: #079be9;
}

<div>
  <button
    class="pounce-0"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button renders \`medium\` size correctly 1`] = `
.pounce-0 {
  width: auto;
  outline: none;
  padding-left: 12px;
  padding-right: 12px;
  height: 32px;
  font-size: 0.813rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #11A5F3;
  background-color: #11A5F3;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-0:hover {
  background-color: #1baffd;
  border-color: #1baffd;
}

.pounce-0:focus {
  background-color: #1baffd;
  border-color: #66faff;
}

.pounce-0:active,
.pounce-0[data-active=true] {
  background-color: #079be9;
  border-color: #079be9;
}

<div>
  <button
    class="pounce-0"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button renders \`small\` size correctly 1`] = `
.pounce-0 {
  width: auto;
  outline: none;
  padding-left: 8px;
  padding-right: 8px;
  height: 24px;
  font-size: 0.75rem;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  border: 1px solid;
  border-color: #11A5F3;
  background-color: #11A5F3;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-0:hover {
  background-color: #1baffd;
  border-color: #1baffd;
}

.pounce-0:focus {
  background-color: #1baffd;
  border-color: #66faff;
}

.pounce-0:active,
.pounce-0[data-active=true] {
  background-color: #079be9;
  border-color: #079be9;
}

<div>
  <button
    class="pounce-0"
    type="button"
  >
    Test
  </button>
</div>
`;
